// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with disabled 1`] = `
<div
  aria-disabled={true}
  className="listItem list-item listItemSmall list-item--small listItemDisabled list-item--disabled"
  data-testid="list-item"
  id=""
  onClick={[Function]}
  onKeyDown={[Function]}
  role="listitem"
  tabIndex={0}
/>
`;

exports[`renders correctly with empty props 1`] = `
<div
  aria-disabled={false}
  className="listItem list-item listItemSmall list-item--small"
  data-testid="list-item"
  id=""
  onClick={[Function]}
  onKeyDown={[Function]}
  role="listitem"
  tabIndex={0}
/>
`;

exports[`renders correctly with selected 1`] = `
<div
  aria-disabled={false}
  className="listItem list-item listItemSmall list-item--small listItemSelected list-item--selected"
  data-testid="list-item"
  id=""
  onClick={[Function]}
  onKeyDown={[Function]}
  role="listitem"
  tabIndex={0}
/>
`;

exports[`renders correctly with selected and disabled 1`] = `
<div
  aria-disabled={true}
  className="listItem list-item listItemSmall list-item--small listItemDisabled list-item--disabled"
  data-testid="list-item"
  id=""
  onClick={[Function]}
  onKeyDown={[Function]}
  role="listitem"
  tabIndex={0}
/>
`;

exports[`renders correctly with size 1`] = `
<div
  aria-disabled={false}
  className="listItem list-item listItemLarge list-item--large"
  data-testid="list-item"
  id=""
  onClick={[Function]}
  onKeyDown={[Function]}
  role="listitem"
  tabIndex={0}
/>
`;
